--- a/templates/bookings/confirm-success.html.twig
+++ b/templates/bookings/confirm-success.html.twig
@@ -2,6 +2,8 @@
 {% block body %}
     <div class="container">
         <h2>Rezerwcja zostala potwierdzona!</h2>
+        <p>Sms z potwierdzeniem został wysłany do klienta</p>
+        <p>Email z potwierdzeniem został wysłany do klienta</p>
         <div class="btn-group">
             <a href="{{ path('bookings_list') }}" class="btn btn-success">
                 Lista rezerwacji
