--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -11,12 +11,12 @@
                 </div>
                 <div class="form-row">
                     <div class="col-md-12 mb-3">
-                        <input type="text" name="lastName" class="form-control" placeholder="Nazwisko" required="" />
+                        <input type="email" name="email" class="form-control" placeholder="Poczta" required="" />
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="col-md-12 mb-3">
-                        <input type="email" name="email" class="form-control" placeholder="Poczta" required="" />
+                        <input type="text" name="phone" class="form-control" placeholder="Telefon" required="" />
                     </div>
                 </div>
                 <div class="form-row">
