--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -3,11 +3,11 @@
 <div class="container">
     <div class="btn-group btn-group-toggle">
         {% if app.user.role == 'ADMIN_ROLE' %}
-            <a href="{{ path('staff_list') }}" class="btn btn-success btn-lg">
+            <a href="{{ path('employee_list') }}" class="btn btn-success btn-lg">
                 Pracownicy
             </a>
         {% endif %}
-        {% if app.user.role == 'ADMIN_ROLE' or app.user.role == 'STAFF_ROLE' %}
+        {% if app.user.role == 'ADMIN_ROLE' or app.user.role == 'EMPLOYEE_ROLE' %}
             <a href="{{ path('halls_list') }}" class="btn btn-success btn-lg">
                 Sale
             </a>
@@ -21,6 +21,70 @@
                 Wynajęcia
             </a>
         {% endif %}
+        <a href="{{ path('profile_edit') }}" class="btn btn-success btn-lg">
+            Edytuj swoje dane
+        </a>
     </div>
+    {% if app.user.role == 'CLIENT_ROLE' %}
+        <div class="card" style="margin-top: 10px">
+            <div class="card-header">
+                <h3>Rezerwacje</h3>
+            </div>
+            <div class="card-body">
+                <table class="table table-borderless">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Sala</th>
+                        <th scope="col">Data</th>
+                        <th scope="col">Ilość osób</th>
+                        <th scope="col">Komentarz</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for booking in bookings %}
+                        <tr>
+                            <th scope="row">{{ booking.id }}</th>
+                            <td>{{ booking.hall.name }}</td>
+                            <td>{{ booking.dateFrom|date("m/d/Y") }} - {{ booking.dateTo|date("m/d/Y") }}</td>
+                            <td>{{ booking.peoplesCount }}</td>
+                            <td>{{ booking.comment }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="card" style="margin-top: 10px">
+            <div class="card-header">
+                <h3>Wynajęcia</h3>
+            </div>
+            <div class="card-body">
+                <table class="table table-borderless">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Sala</th>
+                        <th scope="col">Data</th>
+                        <th scope="col">Ilość osób</th>
+                        <th scope="col">Suma</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for rent in rents %}
+                        <tr>
+                            <th scope="row">{{ rent.id }}</th>
+                            <td>{{ rent.booking.hall.name }}</td>
+                            <td>{{ rent.booking.dateFrom|date("m/d/Y") }} - {{ rent.booking.dateTo|date("m/d/Y") }}</td>
+                            <td>{{ rent.booking.peoplesCount }}</td>
+                            <td>{{ rent.amount }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    {% endif %}
 </div>
 {% endblock %}
