--- a/templates/bookings/list.html.twig
+++ b/templates/bookings/list.html.twig
@@ -1,36 +1,46 @@
 {%  extends 'layout/default.html.twig' %}
 {% block body %}
     <div class="container">
-        <h3>Rezerwacje</h3>
-        <table class="table">
-            <thead class="thead-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Sala</th>
-                <th scope="col">Data</th>
-                <th scope="col">Ilość osób</th>
-                <th scope="col">Komentarz</th>
-                <th scope="col">Klient</th>
-                <th scope="col"></th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for booking in bookings %}
-                <tr>
-                    <th scope="row">{{ booking.id }}</th>
-                    <td>{{ booking.sala.nazwa }}</td>
-                    <td>{{ booking.dataOd|date("m/d/Y") }} - {{ booking.dataDo|date("m/d/Y") }}</td>
-                    <td>{{ booking.iloscOs }}</td>
-                    <td>{{ booking.komentarz }}</td>
-                    <td>{{ booking.klient.firstName }} {{ booking.klient.lastName }}</td>
-                    <td>
-                        <a href="{{ path('booking_confirm', {id: booking.id}) }}" class="btn btn-success btn-xs">
-                            Potwierdź
-                        </a>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        <div class="card">
+            <div class="card-header">
+                <h3>Rezerwacje</h3>
+            </div>
+            <div class="card-body">
+                <table class="table table-borderless">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Sala</th>
+                        <th scope="col">Data</th>
+                        <th scope="col">Ilość osób</th>
+                        <th scope="col">Komentarz</th>
+                        <th scope="col">Klient</th>
+                        <th scope="col"></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for booking in bookings %}
+                        <tr>
+                            <th scope="row">{{ booking.id }}</th>
+                            <td>{{ booking.hall.name }}</td>
+                            <td>{{ booking.dateFrom|date("Y-m-d H:i") }} - {{ booking.dateTo|date("Y-m-d H:i") }}</td>
+                            <td>{{ booking.peoplesCount }}</td>
+                            <td>{{ booking.comment }}</td>
+                            <td>
+                                <span><i>Imie</i>: {{ booking.client.firstName }}</span><br />
+                                <span><i>Telefon</i>: {{ booking.client.phone }}</span><br />
+                                <span><i>Poczta</i>: {{ booking.client.email }}</span>
+                            </td>
+                            <td>
+                                <a href="{{ path('booking_confirm', {id: booking.id}) }}" class="btn btn-success btn-xs">
+                                    Potwierdź
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 {% endblock %}
