--- a/templates/rent/list.html.twig
+++ b/templates/rent/list.html.twig
@@ -1,30 +1,40 @@
 {%  extends 'layout/default.html.twig' %}
 {% block body %}
     <div class="container">
-        <h3>Wynajęcia</h3>
-        <table class="table">
-            <thead class="thead-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Sala</th>
-                <th scope="col">Data</th>
-                <th scope="col">Ilość osób</th>
-                <th scope="col">Suma</th>
-                <th scope="col">Klient</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for rent in rents %}
-                <tr>
-                    <th scope="row">{{ rent.id }}</th>
-                    <td>{{ rent.rezewacja.sala.nazwa }}</td>
-                    <td>{{ rent.rezewacja.dataOd|date("m/d/Y") }} - {{ rent.rezewacja.dataDo|date("m/d/Y") }}</td>
-                    <td>{{ rent.rezewacja.iloscOs }}</td>
-                    <td>{{ rent.suma }}</td>
-                    <td>{{ rent.rezewacja.klient.firstName }} {{ rent.rezewacja.klient.lastName }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        <div class="card">
+            <div class="card-header">
+                <h3>Wynajęcia</h3>
+            </div>
+            <div class="card-body">
+                <table class="table table-borderless">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Sala</th>
+                        <th scope="col">Data</th>
+                        <th scope="col">Ilość osób</th>
+                        <th scope="col">Suma</th>
+                        <th scope="col">Klient</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for rent in rents %}
+                        <tr>
+                            <th scope="row">{{ rent.id }}</th>
+                            <td>{{ rent.booking.hall.name }}</td>
+                            <td>{{ rent.booking.dateFrom|date("Y-m-d H:i") }} - {{ rent.booking.dateTo|date("Y-m-d H:i") }}</td>
+                            <td>{{ rent.booking.peoplesCount }}</td>
+                            <td>{{ rent.amount }} zł</td>
+                            <td>
+                                <span><i>Imie</i>: {{ rent.booking.client.firstName }}</span><br />
+                                <span><i>Telefon</i>: {{ rent.booking.client.phone }}</span><br />
+                                <span><i>Poczta</i>: {{ rent.booking.client.email }}</span>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 {% endblock %}
