--- a/templates/site/catalog.html.twig
+++ b/templates/site/catalog.html.twig
@@ -6,23 +6,64 @@
             <div class="card">
                 <div class="card-body">
                     <h3>Wyszukiwanie sali</h3>
-                    <form>
+                    <form method="get">
                         <p><b>Data</b></p>
                         <div class="form-group row">
                             <label for="dateFrom" class="col-sm-3 col-form-label">od:</label>
                             <div class="col-sm-9">
-                                <input type="date" class="form-control" id="dateFrom" placeholder="od">
+                                <input type="date"
+                                       name="date[from]"
+                                       class="form-control"
+                                       {% if filter.dateFrom %}
+                                            value="{{ filter.dateFrom|date("Y-m-d") }}"
+                                       {% endif %}
+                                       id="dateFrom"
+                                       placeholder="od"
+                                />
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="dateTo" class="col-sm-3 col-form-label">do:</label>
                             <div class="col-sm-9">
-                                <input type="date" class="form-control" id="dateTo" placeholder="do">
+                                <input type="date"
+                                       name="date[to]"
+                                       {% if filter.dateTo %}
+                                           value="{{ filter.dateTo|date("Y-m-d") }}"
+                                       {% endif %}
+                                       class="form-control"
+                                       id="dateTo"
+                                       placeholder="do"
+                                />
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="price"><b>Cena</b></label>
-                            <input type="range" min="50" max="250" value="50" class="form-control-range" id="price">
+                        <p><b>Cena</b></p>
+                        <div class="form-group row">
+                            <label for="priceFrom" class="col-sm-3 col-form-label">od:</label>
+                            <div class="col-sm-9">
+                                <input type="text"
+                                       name="price[from]"
+                                       {% if filter.priceFrom %}
+                                           value="{{ filter.priceFrom }}"
+                                       {% endif %}
+                                       class="form-control"
+                                       id="priceFrom"
+                                       placeholder="od"
+                                />
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="priceTo" class="col-sm-3 col-form-label">do:</label>
+                            <div class="col-sm-9">
+                                <input type="text"
+                                       name="price[to]"
+                                       {% if filter.priceTo %}
+                                           value="{{ filter.priceTo }}"
+                                       {% endif %}
+                                       class="form-control"
+                                       id="priceTo"
+                                       placeholder="do"
+                                />
+                            </div>
                         </div>
                         <p><b>Opcje</b></p>
                         {% for option in options %}
@@ -32,9 +73,12 @@
                                        name="options[]"
                                        value="{{ option.id }}"
                                        id="options{{ option.id }}"
+                                       {% if filter.options and option.id in filter.options %}
+                                            checked
+                                       {%  endif %}
                                 />
                                 <label class="form-check-label" for="options{{ option.id }}">
-                                    {{ option.nazwa }}
+                                    {{ option.name }}
                                 </label>
                             </div>
                         {% endfor %}
@@ -47,36 +91,57 @@
         </div>
         <div class="col-sm-9 catalog-container">
             {% for hall in halls %}
-                {% set price = priceService.getByDate(hall) %}
+                {% set price = priceService.getByDate(hall, filter) %}
                 <div class="card">
                     <div class="card-body hall-card-body">
                         {% if not price is null %}
                             <div class="hall-price">
-                                <h4>{{ price.wartosc }},-/godz.</h4>
+                                <h4>{{ price.value }},-</h4>
+                                <p class="small">za godzine</p>
                             </div>
                         {% endif %}
                         <div class="hall-images">
-                            <div class="hall-image-main">
-                                <img src="{{ asset('assets/img/bg.jpg') }}" />
+                            <div class="hall-image-main"
+                                 style="
+                                         background: url('/uploads/images/{{ hall.images[0].filePath }}') center center;
+                                         background-size: 100% auto;
+                                     "
+                            >
                             </div>
                             <div class="hall-images-preview">
-                                <img src="{{ asset('assets/img/bg.jpg') }}" />
-                                <img src="{{ asset('assets/img/bg.jpg') }}" />
-                                <img src="{{ asset('assets/img/bg.jpg') }}" />
+                                <img src="/uploads/images/{{ hall.images[1].filePath }}" />
+                                <img src="/uploads/images/{{ hall.images[2].filePath }}" />
+                                <img src="/uploads/images/{{ hall.images[3].filePath }}" />
                             </div>
                         </div>
                         <div class="hall-description">
+                            {% if price is null %}
+                                <div class="alert alert-warning" role="alert">
+                                    Sala nie ma ceny w ybranym zakresie dat.
+                                    Prosze o kontakt z pracownikiem {{ hall.employee.phone }} ({{ hall.employee.firstName }})
+                                </div>
+                            {% endif %}
                             <h3>
                                 <a href="{{ path('item', {id: hall.id}) }}">
-                                    {{ hall.nazwa }}
+                                    {{ hall.name }}
                                 </a>
                             </h3>
-                            <p><b>Miasto:</b>{{ hall.miasto }}</p>
-                            <p><b>Adresa:</b>{{ hall.adresa }}</p>
+                            <p><b>Miasto:</b>{{ hall.city }}</p>
+                            <p><b>Adresa:</b>{{ hall.address }}</p>
                             <div class="btn-group-sm">
+                                {% if hall.id not in basketItems %}
+                                    <a href="#"
+                                       data-id="{{ hall.id }}"
+                                       class="btn btn-success btn-sm add-to-card"
+                                    >
+                                        Dodaj do koszyka
+                                    </a>
+                                {% endif %}
+
                                 <a href="{{ path('item', {id: hall.id}) }}" class="btn btn-success btn-sm">
                                     Zobacz
                                 </a>
+
                                 <a href="{{ path('book', {id: hall.id}) }}" class="btn btn-primary btn-sm">
                                     Rezerwuj
                                 </a>
